--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>My GitHub Page</title>
+  <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file -->
+</head>
+<body>
+  <h1>Welcome to My Page</h1>
+  <p>This is a simple HTML page hosted on GitHub Pages.</p>
+</body>
+</html>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Untitled</title><style>
 /* cspell:disable-file */
 /* webkit printing magic: print all background colors */
