--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<style>
+  body {
+    color: white !important;
+    background-color: black !important;
+  }
+</style>
 <!DOCTYPE html>
 <html>
 <head>
