--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<style>
+  body {
+    color: #B6B6B4 !important;
+    background-color: black !important;
+  }
+</style>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Untitled</title><style>
 /* cspell:disable-file */
 /* webkit printing magic: print all background colors */
