--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     background-color: black !important;
   }
 </style>
+<head>
+  <meta charset="UTF-8">
+  <title>LAPIScoin</title> <!-- This sets the browser tab title -->
+  <link rel="stylesheet" href="style.css">
+</head>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Untitled</title><style>
 /* cspell:disable-file */
 /* webkit printing magic: print all background colors */
