--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<style>
+  body {
+    color: #B6B6B4 !important;
+    background-color: black !important;
+  }
+</style>
+<head>
+  <meta charset="UTF-8">
+  <title>LapisCoin</title> <!-- This sets the browser tab title -->
+  <link rel="stylesheet" href="style.css">
+<head>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Untitled</title><style>
 /* cspell:disable-file */
 /* webkit printing magic: print all background colors */
