--- a/index.html
+++ b/index.html
@@ -692,8 +692,7 @@ blockquote {
 }
 	
 </style></head><body><article id="20ac08c7-abfe-8017-9d9c-cbd31854aab2" class="page sans"><header><h1 class="page-title"></h1><p class="page-description"></p></header><div class="page-body"><div id="20ac08c7-abfe-802d-ae09-f71cd038f149" class="column-list"><div id="20ac08c7-abfe-805d-a8f7-e5256df939fa" style="width:29.166666666666664%" class="column"><p id="20ac08c7-abfe-8094-9f80-ee0ce002be68" class="">
-</p></div><div id="20ac08c7-abfe-80ae-8615-e886df34dfb3" style="width:75.00000000000003%" class="column"><h2 id="20ac08c7-abfe-80aa-99b4-ff7a9f7c21a8" class=""><mark class="highlight-default"><mark class="highlight-default_background"> Even with broken wrings, we can rise.</mark></mark></h2><p id="20ac08c7-abfe-80df-83db-ec15513ccd15" class="">
-</p></div><div id="20ac08c7-abfe-8073-84c2-db870d177711" style="width:4.166666666666666%" class="column"><p id="20ac08c7-abfe-80cc-afeb-e34f624dbef5" class="">
+<h2 style="color: white;">Even with broken wrings, we can rise.</h2></p></div><div id="20ac08c7-abfe-8073-84c2-db870d177711" style="width:4.166666666666666%" class="column"><p id="20ac08c7-abfe-80cc-afeb-e34f624dbef5" class="">
 </p></div></div><div id="20ac08c7-abfe-8090-9798-c898f6e8cbac" class="column-list"><div id="20ac08c7-abfe-801e-b832-f02ca11f9e3d" style="width:40.625%" class="column"><p id="20ac08c7-abfe-8028-87c7-d79159103c25" class="">
 </p></div><div id="20ac08c7-abfe-80da-9a06-e17bffc6f614" style="width:65.625%" class="column"><figure id="20ac08c7-abfe-806c-9652-ceeed788ff6e" class="image" style="text-align:right"><a href="Untitled%2020ac08c7abfe80179d9ccbd31854aab2/IMG_2141.jpeg"><img style="width:432px" src="Untitled%2020ac08c7abfe80179d9ccbd31854aab2/IMG_2141.jpeg"/></a></figure><p id="20ac08c7-abfe-803f-8175-c4e735d3181e" class="">
 </p></div><div id="20ac08c7-abfe-80a7-8261-df9cbf5620bb" style="width:100%" class="column"><p id="20ac08c7-abfe-80ff-b9c4-d4db0fdd170b" class="">
