--- a/index.html
+++ b/index.html
@@ -709,13 +709,15 @@ body {
 </p><figure class="image" id="20ac08c7-abfe-80e8-b722-c4d496224174"><a href="Untitled%2020ac08c7abfe80179d9ccbd31854aab2/a69a3410-2fa3-42f1-bfab-5fdd9a7bcaad.png"><img src="Untitled%2020ac08c7abfe80179d9ccbd31854aab2/a69a3410-2fa3-42f1-bfab-5fdd9a7bcaad.png" style="width:288px"/></a></figure></div><div class="column" id="20ac08c7-abfe-8093-b909-d9f155e69548" style="width:50%"><figure class="image" id="20ac08c7-abfe-8048-b91f-de58512313a2"><a href="Untitled%2020ac08c7abfe80179d9ccbd31854aab2/3D2C766A-B2BC-49CA-90F7-41D998742A94.jpeg"><img src="Untitled%2020ac08c7abfe80179d9ccbd31854aab2/3D2C766A-B2BC-49CA-90F7-41D998742A94.jpeg" style="width:710px"/></a></figure><p class="" id="20ac08c7-abfe-80c8-92e3-f16f5616616a">
 </p><figure class="image" id="20ac08c7-abfe-80cd-b661-cc6982f608a1"><a href="Untitled%2020ac08c7abfe80179d9ccbd31854aab2/7D849385-7ED8-48BC-AB5A-360F7F9A8CF1.jpeg"><img src="Untitled%2020ac08c7abfe80179d9ccbd31854aab2/7D849385-7ED8-48BC-AB5A-360F7F9A8CF1.jpeg" style="width:710px"/></a></figure></div></div><hr id="20bc08c7-abfe-8023-a50a-de269d9a4140"/><p class="" id="20bc08c7-abfe-804f-8938-d829dfc58436"><strong>Thus, Lapis rose once more—no longer just a guardian of the night, but a lasting symbol of resilience and hope.</strong><br/>We didn’t just create a token — we built a movement.<br/>A mission to carry on what Lapis stood for:<br/>to uplift the forgotten, stand against cruelty,<br/>and remind the world that even in darkness, there is still light.<br/>We made a meme coin—not just for laughs,<br/>but to celebrate the owl who flew through pain,<br/>who gave hope to the hopeless,<br/>and reminded us all:<br/><strong>Even with broken wings, we can rise.</strong><br/></p><p class="" id="20bc08c7-abfe-80c5-8060-c7e29e250de1">
 </p><hr id="20bc08c7-abfe-804c-9500-c4d7470887f8"/><p class="" id="20bc08c7-abfe-8060-8a78-d2c2ef3bd706">
-<div style="text-align: center; margin-top: 2em;">
-  <div style="display: inline-block; margin: 0 20px;">
-    <img src="IMG_2141d.png" alt="LAPIS-THE OWL" style="width: 140px;"/>
-  </div>
-  <div style="display: inline-block; margin: 0 20px;">
-    <img src="CE3E731F-A1DE-499E-903B-9DC70CEAAA64.png" alt="$LAPIS" style="width: 140px;"/>
-  </div>
+<div style="width: 100%; display: flex; justify-content: center; gap: 40px; margin: 40px 0;">
+    <div>
+        <img src="IMG_2141d.png" alt="LAPIS-THE OWL" style="width: 130px;">
+        <div style="color: white; text-align: center; font-weight: bold; margin-top: 10px;">LAPIS-THE OWL</div>
+    </div>
+    <div>
+        <img src="CE3E731F-A1DE-499E-903B-9DC70CEAAA64.png" alt="$LAPIS" style="width: 130px;">
+        <div style="color: white; text-align: center; font-weight: bold; margin-top: 10px;">$LAPIS</div>
+    </div>
 </div>
 </div><script crossorigin="anonymous" integrity="sha512-7Z9J3l1+EYfeaPKcGXu3MS/7T+w19WtKQY/n+xzmw4hZhJ9tyYmcUS+4QqAlzhicE5LAfMQSF3iFTK9bQdTxXg==" referrerpolicy="no-referrer" src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script><link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism.min.css" integrity="sha512-tN7Ec6zAFaVSG3TpNAKtk4DOHNpSwKHxxrsiw4GHKESGPs5njn/0sMCUMl2svV4wo4BK/rCP7juYz+zx+l6oeQ==" referrerpolicy="no-referrer" rel="stylesheet"/><p style="font-size: 0.85rem; color: #DEDFE4; text-align: center; margin-top: 2em;">LapisCoin is a community-driven meme token—not a financial instrument or investment guarantee. Crypto is volatile: prices may soar on wings of hype, tumble in silence, wander aimlessly, or slip into the dark beyond. This project celebrates creativity and resilience, but always DYOR (do your own research), and never risk more than you can afford to lose. This is not financial advice.</p><blockquote class="" id="20bc08c7-abfe-80d2-8976-fda20d6ed6ff" style="text-align: center; font-size: 1.2rem; font-weight: bold; margin-top: 2em;"><strong>“Hope flies again.” — $LAPIS</strong></blockquote><p class="" id="20bc08c7-abfe-80bc-ad5d-ecec0894967c">
 </p></div></article><span class="sans" style="font-size:14px;padding-top:2em"></span></body></html>
